# GiellaLTLexTools

./: CHANGELOG.md  README.md  pyproject.toml
giellaltlextools/: __init__.py  gtlemmatest.py  gtmissing.py  gtmultichartest.py  gtparadigmtest.py  gtspelltest.py  hfst.py  hfstpope.py  lexc.py
scripts/: build.py
src/: accept-all-lemmas.py  generate-paradigms.py  lexc.py
tests/: test_gtspelltest.py
