[tool.poetry]
name = "giellaltlextools"
version = "0.3.0"
description = "Test and process lexicon data for giellalt projects"
authors = ["Flammie A Pirinen <flammie@iki.fi>"]
readme = "README.md"
homepage = "https://divvun.github.io/giellaltlextools"
repository = "https://github.com/divvun/giellaltlextools"
license = "GPL-3.0"

[tool.poetry.scripts]
gtlemmatest = "giellaltlextools.gtlemmatest:main"
gtparadigmtest = "giellaltlextools.gtparadigmtest:main"
gtspelltest = "giellaltlextools.gtspelltest:main"
gtmultichartest = "giellaltlextools.gtmultichartest:main"

[build-system]
requires = ["poetry-core", "cython>=3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "F", #Pyflakes
    "B", #flake8-bugbear
    "A", #flake8-builtins 
    "C4", #flake8-comprehensions
    "ERA", #eradicate
    "I", #isort
    "PT", #flake8-pytest-style
    "C90", #mccabe
    "N", #pep8-naming
    "E", #pycodestyle error
    "PL" #Pylint
]
ignore = ["A003"]

[tool.poetry.dependencies]
python = "^3.9"
cython = "^3.0.0"
pyhfst = "^1.3.0"

[tool.poetry.group.build.dependencies]
cython = "^3.0.0"
setuptools = "^68.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

[tool.poetry.build]
script = "scripts/build.py"
